[gd_scene load_steps=10 format=3 uid="uid://dd7q8a1f6h0t7"]

[ext_resource type="Texture2D" uid="uid://d0tcsnfbgydd0" path="res://Assets/Creatures/Mammals/AntEater1.svg" id="1_5hjeo"]
[ext_resource type="Script" path="res://Creatures/ant_eater_1.gd" id="1_dh67f"]
[ext_resource type="Texture2D" uid="uid://dmt7vu7kbg1yx" path="res://Assets/Creatures/Mammals/AntEaterTongue.svg" id="2_0c7bj"]
[ext_resource type="Script" path="res://Creatures/enemy_area.gd" id="3_o1hm8"]
[ext_resource type="AudioStream" uid="uid://c32cnedony74g" path="res://Assets/SoundFX/350867__cabled_mess__blip_c_05.wav" id="4_jnynt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0vj5"]
size = Vector2(14, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d02bi"]
size = Vector2(14.5647, 0.965115)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o466b"]
size = Vector2(8.46321, 0.963212)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j6xc1"]
size = Vector2(8.4083, 0.931623)

[node name="AntEater_1" type="Node2D"]
script = ExtResource("1_dh67f")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.0998397, 0.103681)
texture = ExtResource("1_5hjeo")

[node name="Area2D" type="Area2D" parent="." node_paths=PackedStringArray("par") groups=["enemy"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("3_o1hm8")
par = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, -0.5)
shape = SubResource("RectangleShape2D_l0vj5")

[node name="TongueArea" type="Area2D" parent="." node_paths=PackedStringArray("par") groups=["enemy"]]
visible = false
position = Vector2(24, -1)
collision_layer = 2
collision_mask = 5
monitoring = false
monitorable = false
script = ExtResource("3_o1hm8")
par = NodePath("..")

[node name="Tongue" type="Sprite2D" parent="TongueArea"]
position = Vector2(7, 6.35854)
scale = Vector2(0.144421, 0.0887386)
texture = ExtResource("2_0c7bj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TongueArea"]
position = Vector2(-4.04397, 4.99903)
rotation = -0.0994478
shape = SubResource("RectangleShape2D_d02bi")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TongueArea"]
position = Vector2(7.22051, 5.4576)
rotation = 0.334834
shape = SubResource("RectangleShape2D_o466b")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="TongueArea"]
position = Vector2(15.4155, 5.27164)
rotation = -0.371942
shape = SubResource("RectangleShape2D_j6xc1")

[node name="TongueTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jnynt")
volume_db = 10.307
pitch_scale = 0.75
max_distance = 10000.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="TongueArea" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="TongueTimer" to="." method="_on_timer_timeout"]
